tests/compile-fail/integration__integration__general__break_outside_loop_in_nested_func.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: break outside of a loop
   ┌─ <input>:24:17
   │
24 │                 break;
   │                 ^^^^^ not valid outside of a loop


